# AI-pose

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/reba/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: +3.json  +6.json  -3.json  -6.json  cuowu.json  data.json  fankui.json  green.json  hengping.json  jiance.json  jianceok.json  xuegao.json
app/src/main/assets/bodyBox/: bot_big.json  bot_sm.json  top_big.json
app/src/main/assets/xuegao/: xuegao.json
app/src/main/java/com/example/reba/: BaseActivity.kt  GraphicOverlay.kt  MainActivity.kt  NcnnYolov5.java  YoloV5Ncnn.java
app/src/main/java/com/example/reba/Pose_sacn/: PoseGraphic.kt
app/src/main/java/com/example/reba/classification/: ClassificationResult.java  EMASmoothing.java  PoseClassifier.java  PoseClassifierProcessor.java  PoseEmbedding.java  PoseSample.java  RepetitionCounter.java  Utils.java
app/src/main/java/com/example/reba/utils/: RectOverlay.kt  (+4 more)
app/src/main/jni/: CMakeLists.txt  yolov5.cpp  yolov5ncnn.cpp  yolov5ncnn_jni.cpp
app/src/main/res/animator/: count_down_timer_animator.xml  out_to_left.xml
app/src/main/res/color/: pin_line_colors.xml
app/src/main/res/drawable/: ic_reset.xml  ic_star.xml  shape_bg_black_alpha.xml  shape_btn_gray.xml  shape_btn_red.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/reba/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
